--- a/app/src/main/res/layout/country_list_item.xml
+++ b/app/src/main/res/layout/country_list_item.xml
@@ -34,7 +34,7 @@
             android:textColor="@color/black"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@+id/country_name"
-            tools:text="name"
+            tools:text="region"
             tools:ignore="MissingConstraints" />
 
         <TextView
@@ -45,7 +45,7 @@
             android:textColor="@color/black"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:text="name"
+            tools:text="code"
             tools:ignore="MissingConstraints" />
 
 
@@ -57,7 +57,7 @@
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/country_name"
-            tools:text="name" />
+            tools:text="capital" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
