--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="dimen_20dp">20dp</dimen>
     <dimen name="dimen_20sp">20sp</dimen>
     <dimen name="dimen_15sp">15sp</dimen>
+    <dimen name="dimen_10dp">10dp</dimen>
 </resources>
